--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
           username: JoeAnimation
           password: lyx484520
           basedir: E:\java-training\configuration
+          skipSslValidation: true
   rabbitmq:
     host: 192.168.1.12
     username: joe
